--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -146,7 +146,7 @@ a {
 
 .download-section {
   color: white;
-  background: url("../img/bchs.jpg") no-repeat center center scroll;
+  background: url("../img/pf.jpg") no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
