--- a/public/styles.css
+++ b/public/styles.css
@@ -29,7 +29,7 @@ body {
   font-size: 1rem;
   line-height: inherit;
   color: inherit;
-  background-color: #fff;
+  background-color: fffff0;
   margin-top: 71px; /* Offset body content by navbar height. */
   padding-top: 0;
   counter-reset: captions;
@@ -302,7 +302,7 @@ small,
  **************************************************/
 
 .modal-content {
-  background: #fff;
+  background: fffff0;
 }
 
 .modal-title {
@@ -402,7 +402,7 @@ a[data-fancybox] img {
 }
 
 .home-section {
-  background-color: #fff;
+  background-color: fffff0;
   padding: 110px 0 110px 0;
   animation: intro 0.3s both;
   animation-delay: 0.15s;
